<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/basic_margin"
    tools:context=".fragment.ShoppingItemEditFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/BasicTextStyle"
            android:layout_marginEnd="@dimen/basic_margin"
            android:text="@string/caption_shopping_item" />

        <EditText
            style="@style/BasicTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/empty"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/BasicTextStyle"
            android:layout_marginEnd="@dimen/basic_margin"
            android:text="@string/caption_memo" />

        <EditText
            style="@style/BasicTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/empty"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:maxLength="200"/>
    </TableRow>

</TableLayout>